styles.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-size: 10px;
}

.box p {
    font-size: 25px;
}

.box h3 {
    visibility: hidden;
}

.legend {
    height: 250px;
    width: 700px;
    border-style: ridge;
    margin: auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.leg {
    margin: auto;
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.leg p {
    font-size: 18px;
    width: 150px;
}

h1 {
    padding: 20px;
    font-family: 'Roboto Slab', serif;
    font-size: 50px;
    text-align: center;
    color: red;
    margin-top: 30px;
    margin-bottom: 30px;
}

.square {
    height: 20px;
    width: 20px;
    background-color: red;
    border: none;
    margin: 2px;
}

#x-1 {
    background-color: #ea3333b8;
}

#x-2 {
    background-color: gold;
}

#x-3 {
    background-color: lightblue;
}

#x-4 {
    background-color: #448EE4;
}

#x-5 {
    background-color: #2feee8;
}

#x-6 {
    background-color: rgb(147, 25, 147);
}

#x-7 {
    background-color: gold;
}

#x-8 {
    background-color: lightgreen;
}

#x-9 {
    background-color: pink;
}

#x-10 {
    background-color: #B2BEB5;
}

h1:hover {
    /* background-color: #99FF99; */
}

.container {
    padding: 10px;
    display: grid;
    gap: 1px 1px;
    grid-template-columns: repeat(18, 1fr);
}

.box {
    border: 0.5px double skyblue;
    padding: 10px;
    height: auto;
    width: auto;
    border-radius: 10%;
    text-align: center;
    line-height: 25px;
    transition-property: border-radius, transform, background-color;
    transition-duration: 0.5s;
    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);

    .child {
        font-size: 18px;
    }
}

/* #box-1 .child {
    visibility: visible;
} */

/* #box-1:hover .child,
#box-2:hover .child,
#box-3:hover .child,
#box-4:hover .child,
#box-5:hover .child,
#box-6:hover .child,
#box-7:hover .child,
#box-8:hover .child,
#box-9:hover .child,
#box-10:hover .child,
#box-11:hover .child,
#box-12:hover .child {
    visibility: hidden;
} */

.box:hover .child::before {
    position: relative;
    left: 10%;
}

#box-1:hover .child::before {
    visibility: visible;
    content: "1.008";
}

#box-2:hover .child::before {
    visibility: visible;
    content: "4.002";
}

#box-3:hover .child::before {
    visibility: visible;
    content: "6.941";
}

#box-4:hover .child::before {
    visibility: visible;
    content: "4.002";
}

#box-5:hover .child::before {
    visibility: visible;
    content: "10.81";
}

#box-6:hover .child::before {
    visibility: visible;
    content: "12.011";
}

#box-7:hover .child::before {
    visibility: visible;
    content: "14.006";
}

#box-8:hover .child::before {
    visibility: visible;
    content: "16.001";
}

#box-9:hover .child::before {
    visibility: visible;
    content: "18.998";
}

#box-10:hover .child::before {
    visibility: visible;
    content: "20.179";
}

#box-11:hover .child::before {
    visibility: visible;
    content: "22.989";
}

#box-12:hover .child::before {
    visibility: visible;
    content: "24.305";
}

#box-13:hover .child::before {
    visibility: visible;
    content: "26.981";
}

#box-14:hover .child::before {
    visibility: visible;
    content: "28.0855";
}

#box-15:hover .child::before {
    visibility: visible;
    content: "30.9738";
}

#box-16:hover .child::before {
    visibility: visible;
    content: "32.065";
}

#box-17:hover .child::before {
    visibility: visible;
    content: "35.453";
}

#box-18:hover .child::before {
    visibility: visible;
    content: "39.948";
}

#box-19:hover .child::before {
    visibility: visible;
    content: "39.0983";
}

#box-20:hover .child::before {
    visibility: visible;
    content: "40.078";
}

#box-21:hover .child::before {
    visibility: visible;
    content: "44.9559";
}

#box-22:hover .child::before {
    visibility: visible;
    content: "47.867";
}

#box-23:hover .child::before {
    visibility: visible;
    content: "50.9415";
}

#box-24:hover .child::before {
    visibility: visible;
    content: "51.9961";
}

#box-25:hover .child::before {
    visibility: visible;
    content: "54.938";
}

#box-26:hover .child::before {
    visibility: visible;
    content: "55.845";
}

#box-27:hover .child::before {
    visibility: visible;
    content: "58.933";
}

#box-28:hover .child::before {
    visibility: visible;
    content: "58.693";
}

#box-29:hover .child::before {
    visibility: visible;
    content: "63.546";
}

#box-30:hover .child::before {
    visibility: visible;
    content: "65.39";
}

#box-31:hover .child::before {
    visibility: visible;
    content: "69.723";
}

#box-32:hover .child::before {
    visibility: visible;
    content: "72.64";
}

#box-33:hover .child::before {
    visibility: visible;
    content: "74.921";
}

#box-34:hover .child::before {
    visibility: visible;
    content: "78.96";
}

#box-35:hover .child::before {
    visibility: visible;
    content: "79.904";
}

#box-36:hover .child::before {
    visibility: visible;
    content: "83.798";
}

#box-37:hover .child::before {
    visibility: visible;
    content: "85.4678";
}

#box-38:hover .child::before {
    visibility: visible;
    content: "87.62";
}

#box-39:hover .child::before {
    visibility: visible;
    content: "88.906";
}

#box-40:hover .child::before {
    visibility: visible;
    content: "91.224";
}

#box-41:hover .child::before {
    visibility: visible;
    content: "92.906";
}

#box-42:hover .child::before {
    visibility: visible;
    content: "95.94";
}

#box-43:hover .child::before {
    visibility: visible;
    content: "98.001";
}

#box-44:hover .child::before {
    visibility: visible;
    content: "101.07";
}

#box-45:hover .child::before {
    visibility: visible;
    content: "102.91";
}

#box-46:hover .child::before {
    visibility: visible;
    content: "106.42";
}

#box-47:hover .child::before {
    visibility: visible;
    content: "107.87";
}
/* ... */

